Change folder directory

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -10,3 +10,7 @@ books:
     - name: Computation Theory
       category: Computer Science
       path: computation_theory
+
+    - name: Markdown
+      category: Tool
+      path: markdown
