--- a/_config.yml
+++ b/_config.yml
@@ -17,12 +17,37 @@ collections:
       output: true
   a_book_about_me:
       output: true
+  markdown:
+      output: true
   
 
-markdown: kramdown
+markdown: redcarpet
+#highlighter: rouge
+lsi:         false
+excerpt_separator: "\n\n"
+
+# Markdown Processors
+rdiscount:
+  extensions: []
+
+redcarpet:
+  extensions: []
 
 kramdown:
-  auto_ids: true
+  auto_ids:       true
+  footnote_nr:    1
+  entity_output:  as_char
+  toc_levels:     1..6
+  smart_quotes:   lsquo,rsquo,ldquo,rdquo
+  enable_coderay: false
+
+  coderay:
+    coderay_wrap:              div
+    coderay_line_numbers:      inline
+    coderay_line_number_start: 1
+    coderay_tab_width:         4
+    coderay_bold_every:        10
+    coderay_css:               style
 
 
 sass:
